// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"declare const someCondition: boolean;
if (someCondition === true) {
    ~~~~~~~~~~~~~~~~~~~~~~ This expression unnecessarily compares a boolean value to a boolean instead of using it directly.
}
"
`;

exports[` 2`] = `
"declare const someCondition: boolean;
if (someCondition) {
}

declare const someObjectBoolean: boolean | Record<string, unknown>;
if (someObjectBoolean === true) {
}

declare const someStringBoolean: boolean | string;
if (someStringBoolean === true) {
}
"
`;

exports[` 3`] = `
"declare const someUndefinedCondition: boolean | undefined;
if (someUndefinedCondition === true) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ This expression unnecessarily compares a nullable boolean value to true instead of using it directly.
}

declare const someNullCondition: boolean | null;
if (someNullCondition !== true) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~ This expression unnecessarily compares a nullable boolean value to true instead of negating it.
}
"
`;

exports[` 4`] = `
"declare const someUndefinedCondition: boolean | undefined;
if (someUndefinedCondition) {
}

declare const someNullCondition: boolean | null;
if (!someNullCondition) {
}
"
`;

exports[` 5`] = `
"declare const someUndefinedCondition: boolean | undefined;
if (someUndefinedCondition === false) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ This expression unnecessarily compares a nullable boolean value to false instead of using the ?? operator to provide a default.
}

declare const someNullCondition: boolean | null;
if (someNullCondition !== false) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~ This expression unnecessarily compares a nullable boolean value to false instead of using the ?? operator to provide a default.
}
"
`;

exports[` 6`] = `
"declare const someUndefinedCondition: boolean | undefined;
if (someUndefinedCondition ?? true) {
}

declare const someNullCondition: boolean | null;
if (!(someNullCondition ?? true)) {
}
"
`;
